# auto_exc

./: .gitignore  LICENSE  README.md  auto_exc.py  main.py  pd_excl.py  pg_exc.py  pyproject.toml  requirements.txt  t.py  test.xlsx
auto_exc/: auto_exc.py
documents/: document.xlsx
project/: auto_exc.py
src/: auto_exc.py
tests/: fixtures.py  test_book_reed_book.py  test_book_save_book_csv.py  test_clear_csv_files.py  test_create_directory.py  test_create_new_book.py  test_cuts_numbers.py  test_find_files.py  test_find_xlsx_files.py  test_main.py  test_merge_csv_to_xlsx.py  test_read_csv_files.py  test_reed_book.py  test_worker.py
