[project]
name = "auto-exc"
version = "0.1.0"
description = ""
authors = [
    {name = "GenyaElamkov",email = "genyaElamkov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl (>=3.1.5,<4.0.0)",
    "gs (>=1.1.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
